  then previous release (by a factor of 10%) in calculations.
* The initial window at startup has been suppressed in this
  release in the hope to provide am applescript analogous to 
  pass initial arguments to R.
* The about box now reports informations on the current
  release of R
* Added the zlib capability so now R can manage gzipped 
  files and connentions
* Fixed some wrong links in html help files
* Finally fixed copy and paste of graphic windows contents
  and saving of them onto files. For some reason the previous
  algorithm did not copy text characters under MacOS X.
* Fixed a bug that appear when trying to reading files or
  directories on a different volume w.r.t. the current
  working directory of R.
* Added two functions file.edit() and new.file().
  The file.edit() function is similar to file.show() but
  let the user edit the opened file. It it the equivalent
  to the menu command "Open File for Editing..." while
  new.file() is the equivalent to the "New Window" menu
  command with the difference that you can specify the
  name of the new file to edit. For more details see
  man pages.
* Added three functions to manipulate a User menu in the
  R Console menubar. With add.menu.cmd(label,command) the
  user can add menu item "label" to which is associated
  an R command. Respectively with del.menu.cmd(label) and
  get.menu.cmd(label) the user can remove or get the
  command associated to the menu "label". See the help
  pages for details and examples.
* Added three functions to manipulate a User menu in the
  R Console menubar. With del.usr.cmd() the whole user
  menu is removed. Respectively with del.num.cmd(menunum) 
  and get.num.cmd(menunum) the user can remove or get the
  command associated to the menu numbered "menunum". See 
  the help pages for details and examples.
* Fixed some problems with windows naming (duplicates
  and so forth)
* Windows (both text and graphic) now appears only after
  repositioning
    
   
   
   
    


