@@ -75,7 +75,12 @@ connections</li>
   <li>Fixed some problems with windows naming (duplicates and so forth)</li>
 <li>Windows (both text and graphic) now appears only after
   repositioning</li>
-   
+   <li>
+   <li> lwd parameter in graphic functions re-implemented even
+  if not yet perfectly working.</li>
+<li> lty & lwd paramter now works for all the graphic call
+  apart for Circle.
+</li>
 
   </ul>
 
